# LatticeChallenge

./: .gitignore  LICENSE  README.md  pyproject.toml
src/latticechallenge/: __init__.py  download_data.py  download_latticechallenge.py  handler_data.py
