[project]
name = "latticechallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MrQuadr", email = "148150397+MrQuadr@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pathlib",
    "requests",
    "sympy"
]

[project.scripts]
latticechallenge = "latticechallenge:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
